Updated Dockerfile.